Fix syntax errors in decompiled sources